--- a/style.css
+++ b/style.css
@@ -14,3 +14,24 @@ div{
 color: blue;
   
 }
+nav a{
+
+  text-decoration: none;
+  text-transform: capitalize;
+  color: blue;
+  font-size: 20px;
+  font-weight: 600;
+  padding: 0 10px;
+  margin: 0 30px;
+  position: relative;
+  
+
+
+
+}
+nav a:hover{
+
+  color: red;
+
+
+}
