--- a/style.css
+++ b/style.css
@@ -39,18 +39,27 @@ table , th ,td{
 
   border: 1px solid black;
   border-collapse: collapse;
+  
 
 }
 th{
 
   height: 50px;
+  padding: 20px;
 
   
 }
 td{
 
  height: 50px;
+ padding: 20px;
 
+
+  
+}
+th,td:hover{
+
+  color: red;
 
   
 }
