--- a/style.css
+++ b/style.css
@@ -71,10 +71,16 @@ td:hover{
 }
 .box1:hover{
 
-  transform: scale(0.6);
-  transition: 2s;
+  transform: scale(1.3);
+  transition: 1s;
  
 
+
+  
+}
+.box1{
+
+  padding: 20px;
 
   
 }
